man-in-the-middle.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: man-in-the-middle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: man-in-the-middle
  template:
    metadata:
      labels:
        app: man-in-the-middle
    spec:
      containers:
        - name: man-in-the-middle
          image: gcr.io/tigera-demo/attacker-pod:1.0.1
