default-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: storefront
spec:
  podSelector: {}
  policyTypes:
  - Egress
